0.5.2 (1/4/2009)

  Features

    Allow a new catalog search method keyword: ``sort_type``.  For
    ascending sorts, this can be one of ``nbest``, ``fwscan``, or
    ``timsort``.  For descending sorts, only ``nbest`` and ``timsort``
    are supported.  This argument allows fine-grained control of what
    algorithm should be chosen to perform sorting within FieldIndex
    code.

    Better automatic detection of which sort algorithm to use (when
    it's not supplied via ``sort_type``) based on empirical testing.

    Depend on zope.index 3.5.0 rather than any earlier version
    (repoze.catalog fixes migrated upstream in zope.index 3.5.0).

    Add 'sortbench' script to test various field index sort strategies
    (requires 'benchmark' extra to create charts).

  Bug Fixes

    Prevent the potential for a zero division error when attempting to
    sort an empty set of results.

0.5.1 (12/31/2008)

  Features

    Optimize the choice of fieldindex sort strategy.

    Speed up keyword index merges slightly.

    Fix a bug in the return value of the catalog: it would try to
    return the minimum of the number of docs or the limit event
    if there was no limit.

  Bug Fixes

    Sean Upton pointed out that the document map code artificially
    limited the number of documents to half the number that it could
    actually handle.

0.5 (11/10/2008)

  Features

    Add path index.

    Speed up keyword index 'and' (intersection) queries nominally by
    sorting intersected sets from smallest-to-largest first.

    Benchmarking suite provided by Chris Rossi.

    Add a "facet" index
    (``repoze.catalog.indexes.facet.CatalogFacetIndex``).  This index
    is much like a keyword index, but unlike a keyword index it
    contains a facet list (a sequence of known colon-separated values)
    and accepts values that are sequences of colon-separated terms.
    Each term is split on its colons, forming a sequence of